2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c, dvipdfmx.c: Remove unused code.
	* pdfdraw.c: Remove unused arg1 of pdf_dev__rectshape() and
	pdf_dev__flushpath().

2014-01-27  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvipdfmx.c: Revise procedure of reading command line arguments.
	(Windows only)

2014-01-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Fix a bug in dpx_file_apply_filter(), report from
	Michael Rutter <http://tug.org/pipermail/tex-live/2014-January/034771.html>

2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, /ac/withenable.ac, configure.ac:
	Replace libs/paper => libs/libpaper.

2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dbxfile.c [WIN32]: Include <wchar.h>.  Avoid use of
	uninitialized variables cmdvw and qvw.

2014-01-12  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvipdfmx.c: Add '--kpathsea-debug' option and
	fix a bug in '--dvipdfm' option.
	* dvipdfmx.c, mfileio.[ch], dbxfile.c: Allow Unicode file name
	on Windows.

2014-01-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pngimage.c: Allow libpng >= 1.6.3 to read images with
	incorrect CMF bytes.

2013-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (dvipdfmx_SOURCES): Move cidtype0.c to here.
	From Alexey Kryukov <anagnost@yandex.ru>

2013-12-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* spc_xtx.c: Guarantee that mline in is_pdfm_mapline(mline) is a
	zero-ended string when called by spc_handler_xtx_fontmapline().

2013-12-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Guarantee that mline in is_pdfm_mapline(mline) is a
	zero-ended string when called by spc_handler_pdfm_mapline().

2013-11-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Add suffixes ".ai", ".AI" for the Illustrator files.
	In recent illustrators, their default format is PDF.

2013-11-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mpost.c: Fix a bug which I introduced in MetaPost mode (-M option).